--- a/Project1_CigarShop/Project1_CigarShop/Project1_CigarShop.csproj
+++ b/Project1_CigarShop/Project1_CigarShop/Project1_CigarShop.csproj
@@ -9,6 +9,15 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\CigarShop.DataAccess\CigarShop.DataAccess.csproj" />
+    <ProjectReference Include="..\CigarShop.Library\CigarShop.Library.csproj" />
   </ItemGroup>
 
 </Project>
