--- a/Project1_CigarShop/CigarShop.DataAccess/CigarShop.DataAccess.csproj
+++ b/Project1_CigarShop/CigarShop.DataAccess/CigarShop.DataAccess.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\CigarShop.Library\CigarShop.Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
