--- a/Project1_CigarShop/Project1_CigarShop/Project1_CigarShop.csproj
+++ b/Project1_CigarShop/Project1_CigarShop/Project1_CigarShop.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\CigarShop.Library\CigarShop.Library.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Views\Cigar\" />
+  </ItemGroup>
+
 </Project>
