initial work on controllers and views

--- a/Project1_CigarShop/Project1_CigarShop/Project1_CigarShop.csproj
+++ b/Project1_CigarShop/Project1_CigarShop/Project1_CigarShop.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Cigar\" />
+    <Folder Include="Views\Manufacturer\" />
   </ItemGroup>
 
 </Project>
