--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  solutionPath: 'Project1_CigarShop'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration) $(solutionPath)
