Update azure-pipelines.yml for Azure Pipelines
think i got it set up to deploy

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,10 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration) $(solutionPath)
   displayName: 'dotnet build $(buildConfiguration) $(solutionPath)'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: True
