--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   solutionPath: 'Project1_CigarShop'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration) $(solutionPath) --logger trx 
+- script: dotnet build --configuration $(buildConfiguration) $(solutionPath) --logger trx --collect "Code coverage"
   displayName: 'dotnet build $(buildConfiguration) $(solutionPath)'
 
 - task: PublishTestResults@2
@@ -27,6 +27,13 @@ steps:
   inputs:
     command: publish
     publishWebProjects: True
+    projects: '**/*Tests/*.csproj'
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
+
+- task: SonarCloudAnalyze@1
+  inputs: {}
+
+extraProperties:  
+sonar.cs.opencover.reportsPath="$(Build.ArtifactStagingDirectory)/coverage/*"
 
