--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,11 +54,11 @@ steps:
     zipAfterPublish: True
 
 
+
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Free Trial (9a605f76-7edb-4db7-b774-cb256b2d8b9a)'
     appType: 'webApp'
     WebAppName: '1904-llewellyn-cigars'
-    packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
-
+    packageForLinux: '''$(Build.ArtifactStagingDirectory)/**/*.zip'''
