--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,8 +51,7 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: publish
-    publishWebProjects: false
-    projects: $(solutionPath)/RestaurantReviews.WebUI/*.csproj
+    publishWebProjects: true
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
 
